# Insight-Watt-Energy-Advisor-System

./: README.md
Insight-Watt-Backend/: .gitignore  README.md  SETUP.md  main.py  pyproject.toml  requirements.txt
Insight-Watt-Backend/ML/models/: house_31_lgb_model.txt
Insight-Watt-Backend/ML/notebooks/: eda.ipynb  feature_ext.ipynb  model.ipynb
Insight-Watt-Backend/ML/notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Insight-Watt-Backend/agents/: agent_state.py  main_graph.py  nodes.py  test.py
Insight-Watt-Backend/agents/all_agents/: consumption_insight_agent.py  energy_advisor_agent.py  energy_risk_agent.py  user_context_agent.py
Insight-Watt-Backend/backend/: main.py
Insight-Watt-Backend/backend/models/: schemas.py
Insight-Watt-Backend/backend/routes/: energy.py  health.py
Insight-Watt-Backend/backend/services/: agent_service.py  feature_engine.py  forcast_engine.py
Insight-Watt-Backend/backend/utils/: data_adapter.py
Insight-Watt-Backend/data/house_data/: house_36.csv  house_37.csv  house_38.csv
Insight-Watt-Backend/data/output/: daily_weather_forecast_7days.csv  prediction_results.csv
Insight-Watt-Backend/data/raw/weather/: Karachi.csv
Insight-Watt-Backend/data/uploads/: 1b78326d-38db-43a0-92a9-3b0ac4a9d566.csv  38342530-65e9-4c15-9ab1-9de7d2af855e.csv  60f664e9-b698-43b1-947f-1376975e21c0.csv  6fa2f141-56c3-4426-a32d-ac2f3f05a992.csv  6fe0bed9-e5f2-49c4-b1f6-c4ba4b95bbb4.csv  a84b6ae3-bc98-442e-8b94-aa1ad602b1dd.csv  d2612a21-3510-4cda-b51e-475a8730d3e3.csv
Insight-Watt-Backend/docs/: POSTMAN_GUIDE.md
(+33 files in other folders)
